<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/add_menu_width"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="?android:listSeparatorTextViewStyle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_menu_text"
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:textSize="15sp"/>

        <CheckBox
            android:id="@+id/checkbox_branches"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/branches"/>

        <CheckBox
            android:id="@+id/checkbox_atms"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="12dp"
            android:text="@string/atms"/>
    </LinearLayout>

    <ListView
        android:id="@+id/list_add_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:textSize="25dp"/>

    <Button
        android:id="@+id/button_add_menu"
        android:layout_width="@dimen/add_menu_width"
        android:layout_height="wrap_content"
        android:text="@string/updated_ok"
        />

</LinearLayout>