<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/add_menu_width"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/satellite"
            android:textSize="16sp"
            android:textColor="#585858"
            android:paddingLeft="15dp"/>
        <Switch
            android:id="@+id/switch_satellite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="15dp"
            android:textOn=""
            android:textOff=""/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/separator">
        </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/branches"
            android:textSize="16sp"
            android:textColor="#585858"
            android:paddingLeft="15dp"/>
        <Switch
            android:id="@+id/switch_brances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="15dp"
            android:textOn=""
            android:textOff=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/atms"
            android:textSize="16sp"
            android:textColor="#585858"
            android:paddingLeft="15dp"/>
        <Switch
            android:id="@+id/switch_atms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="15dp"
            android:textOn=""
            android:textOff=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/find_the_nearest"
            android:textSize="16sp"
            android:textColor="#585858"
            android:paddingLeft="15dp"/>
        <Switch
            android:id="@+id/switch_nearest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="15dp"
            android:textOn=""
            android:textOff=""/>
    </LinearLayout>

    <Button
        android:id="@+id/button_add_menu"
        android:layout_width="@dimen/add_menu_width"
        android:layout_height="45dp"
        android:text="@string/updated_ok"
        android:layout_marginTop="5dp"
        />
</LinearLayout>